Adicionado E-mail boomer

--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -25,7 +25,8 @@
                             {{form.phone(class="form-control", placeholder=user.phone[7:])}}
                         </div>
                     </div>
-                    <div class="col-md-6"><label class="labels">Email ID</label>{{form.email(class="form-control", placeholder=user.email)}}</div>
+                    <div class="col-md-6"><label class="labels">Email ID</label>
+                        {{form.email(class="form-control", placeholder=user.email)}}</div>
                 </div>
                 <div class="row mt-2">
                     <div class="col-md-6"><label class="labels">Password</label>{{form.password(class="form-control")}}</div>
