--- a/app/templates/index_anonymous.html
+++ b/app/templates/index_anonymous.html
@@ -3,7 +3,7 @@
 {% block title %} {{ super() }} - Main {% endblock %}
 
 {% block content %}
-<div id="myCarousel" class="carousel slide" data-bs-ride="carousel" style="height: 90%;">
+<div id="myCarousel" class="carousel slide" data-bs-ride="carousel" style="height: 95%;">
     <div class="carousel-indicators">
         <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -33,7 +33,7 @@
             </div>
         </div>
         <div class="carousel-item" style="height: 100%;">
-            <img class="bd-placeholder-img" style="object-fit: cover; object-position: 40% 50%; filter: brightness(80%);" width="100%" height="100%" src="https://media.istockphoto.com/photos/two-farmers-talk-on-the-field-then-shake-hands-use-a-tablet-picture-id1201829626?s=2048x2048" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></img>
+            <img class="bd-placeholder-img" style="object-fit: cover; object-position: 40% 50%; filter: brightness(80%);" width="100%" height="100%" src="https://images.pexels.com/photos/5698098/pexels-photo-5698098.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></img>
 
             <div class="container">
                 <div class="carousel-caption text-end">
