--- a/app/templates/graph.html
+++ b/app/templates/graph.html
@@ -17,7 +17,7 @@
             <div class="row">
                 <div class="col">
                     <div class="row">
-                        <h2>Arabica Boa</h2>
+                        <h2>Arabica "Dura"</h2>
                         <div class="col">
                             <h5>Preço Atual</h5>
                             <a style="font-size:3vw">R$ {{last_prices[0]}}</a>
@@ -34,7 +34,7 @@
 
                     </div>
                     <div class="row">
-                        <h2>Arabica Ruim</h2>
+                        <h2>Arabica "Rio"</h2>
                         <div class="col">
                             <h5>Preço Atual</h5>
                             <a style="font-size:3vw">R$ {{last_prices[1]}}</a>
@@ -126,7 +126,7 @@
 
         <div class="col align-self-center" style="color: whitesmoke;font-family: Verdana;">
 
-            O preço atual da saca de café do tipo ARABICA BOA
+            O preço atual da saca de café do tipo Arábica "Dura"
             {%if delta_price[0] == True%}
             subiu
             {%else%}
@@ -136,7 +136,7 @@
             o preço médio da saca foi negociado a R$ {{prices_mean[0]}}
             nos últimos 7 dias.
 
-            O preço do café do tipo ARABICA RUIM
+            O preço do café do tipo Arábica "Rio"
             {%if delta_price[1] == True%}
             subiu
             {%else%}
@@ -146,7 +146,7 @@
             o preço médio da saca foi negociado a R$ {{prices_mean[1]}}
             nos últimos 7 dias.
 
-            O preço do café do tipo CONILLON
+            O preço do café do tipo Conillon
             {%if delta_price[2] == True%}
             subiu
             {%else%}
